--- a/index.html
+++ b/index.html
@@ -51,14 +51,14 @@
 </head>
 <body>
     <header>
-        <h1>Daily Word</h1>
+        <h1>Weblink Max</h1>
     </header>
 
     <div class="container">
-        <div class="box">
-            <h2>Today's Word</h2>
-            <p>Placeholder content for today's word goes here.</p>
-        </div>
+        <button class="box" href="/dailyword.html">
+            <h2>daily word</h2>
+            
+        </button>
     </div>
 
     <footer>
