--- a/index.html
+++ b/index.html
@@ -45,24 +45,23 @@
         footer {
             position: fixed;
             bottom: 0;
+            left: 0;
             width: 100%;
+            margin: 0;
         }
     </style>
 </head>
 <body>
     <header>
-        <h1>Weblink Max</h1>
+        <h1>Word Link Max</h1>
     </header>
 
     <div class="container">
-        <button class="box" href="/dailyword.html">
-            <h2>daily word</h2>
-            
-        </button>
+        <a href="/dailyword.html">Daily Word</a>
     </div>
 
     <footer>
-        <p>&copy; 2024 Your Company. All rights reserved.</p>
+        <p>&copy; 2024 weblink-max Company. All rights reserved.</p>
     </footer>
 </body>
 </html>
