--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Daily Word</title>
+    <title>Web Link Max</title>
     <style>
         /* Basic reset and styles */
         * {
@@ -53,7 +53,7 @@
 </head>
 <body>
     <header>
-        <h1>Word Link Max</h1>
+        <h1>Web Link Max</h1>
     </header>
 
     <div class="container">
