--- a/index.html
+++ b/index.html
@@ -59,7 +59,9 @@
     <div class="container">
         <a href="/dailyword.html">Daily Word</a>
     </div>
-
+    <div class="container">
+        <a href="/html_request_form.html">Daily Word</a>
+    </div>
     <footer>
         <p>&copy; 2024 weblink-max Company. All rights reserved.</p>
     </footer>
