--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         /* Container for content */
         .container {
             max-width: 1200px;
-            margin: 0 auto; /* Center align */
+            margin: 20px auto auto 20px; /* Center align */
             background-color: #fff;
             padding: 20px;
             border-radius: 8px;
@@ -60,7 +60,7 @@
         <a href="/dailyword.html">Daily Word</a>
     </div>
     <div class="container">
-        <a href="/html_request_form.html">Daily Word</a>
+        <a href="/html_request_form.html">HTML Request Form</a>
     </div>
     <footer>
         <p>&copy; 2024 weblink-max Company. All rights reserved.</p>
