--- a/html_request_form.html
+++ b/html_request_form.html
@@ -68,7 +68,7 @@
     <form id="requestForm">
         <div class="form-group">
             <label for="urlInput">URL:</label>
-            <input type="text" id="urlInput" name="url" value="https://json.extendsclass.com/bins" required>
+            <input type="text" id="urlInput" name="url" value="http://json.extendsclass.com/bins" required>
         </div>
         <div class="form-group">
             <label for="methodSelect">Method:</label>
