--- a/index.html
+++ b/index.html
@@ -13,41 +13,63 @@
         }
         body {
             font-family: Arial, sans-serif;
-            background-color: #f0f0f0;
+            background-color: #e0f7fa;
+            color: #333;
             margin: 0;
-            padding: 20px;
-        }
-        /* Container for content */
-        .container {
-            max-width: 1200px;
-            margin: 20px auto auto 20px; /* Center align */
-            background-color: #fff;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-        /* Box styles */
-        .box {
-            background-color: #f8f8f8;
-            padding: 20px;
-            border-radius: 8px;
-            margin-top: 20px;
-            box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+            padding: 0;
         }
         /* Header and footer styles */
         header, footer {
-            background-color: #333;
+            background-color: #00796b;
             color: #fff;
             text-align: center;
-            padding: 10px 0;
+            padding: 15px 0;
             margin-bottom: 20px;
+            border-bottom: 5px solid #004d40;
         }
         footer {
             position: fixed;
             bottom: 0;
             left: 0;
             width: 100%;
-            margin: 0;
+            border-top: 5px solid #004d40;
+        }
+        /* Container styles */
+        .container {
+            max-width: 1200px;
+            margin: 20px auto;
+            background-color: #fff;
+            padding: 20px;
+            border-radius: 12px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+        }
+        .container:hover {
+            transform: scale(1.02);
+            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
+        }
+        /* Box styles */
+        .box {
+            background-color: #ffffff;
+            padding: 20px;
+            border-radius: 12px;
+            margin-top: 20px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        }
+        /* Link styles */
+        a {
+            display: block;
+            text-decoration: none;
+            color: #00796b;
+            font-size: 1.2em;
+            margin: 10px 0;
+            padding: 10px;
+            border-radius: 8px;
+            transition: background-color 0.3s ease, color 0.3s ease;
+        }
+        a:hover {
+            background-color: #004d40;
+            color: #ffffff;
         }
     </style>
 </head>
@@ -61,6 +83,9 @@
     </div>
     <div class="container">
         <a href="/html_request_form.html">HTML Request Form</a>
+    </div>
+    <div class="container">
+        <a href="/Online_JSON_Web_Storage_Notepad.html">Online JSON Web Storage Notepad</a>
     </div>
     <footer>
         <p>&copy; 2024 weblink-max Company. All rights reserved.</p>
