--- a/index.html
+++ b/index.html
@@ -87,6 +87,9 @@
     <div class="container">
         <a href="/Online_JSON_Web_Storage_Notepad.html">Online JSON Web Storage Notepad</a>
     </div>
+    <div class="container">
+        <a href="/Weather_Dashboard.html">Weather Dashboard</a>
+    </div>
     <footer>
         <p>&copy; 2024 weblink-max Company. All rights reserved.</p>
     </footer>
