--- a/index.html
+++ b/index.html
@@ -90,6 +90,9 @@
     <div class="container">
         <a href="/Weather_Dashboard.html">Weather Dashboard</a>
     </div>
+    <div class="container">
+        <a href="/Daily_Routine_Planner.html">Daily Routine Planner</a>
+    </div>
     <footer>
         <p>&copy; 2024 weblink-max Company. All rights reserved.</p>
     </footer>
