--- a/index.html
+++ b/index.html
@@ -96,6 +96,9 @@
     <div class="container">
         <a href="/webapp.html">webapp</a>
     </div>
+    <div class="container">
+        <a href="/Daily_Schedule.html">Daily Schedule</a>
+    </div>
     <footer>
         <p>&copy; 2024 weblink-max Company. All rights reserved.</p>
     </footer>
