--- a/Daily_Schedule.html
+++ b/Daily_Schedule.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Task Scheduler</title>
+    <title>Task Scheduler(ss)</title>
+    <link rel="manifest" href="/manifest.json">
+
     <style>
         body {
             font-family: Arial, sans-serif;
