--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <nav class="navbar sticky-top navbar-expand-lg bg-dark border-bottom border-body mb-3" data-bs-theme="dark">
   <div class="container-fluid">
     <a class="navbar-brand">
-      <span class="h3">Weblink Max</span>
+      Weblink Max
     </a>
     <form class="d-flex" role="search">
       <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
