--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>SPA Web app</title>
+  <title>Weblink Max</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
   <link href='https://fonts.googleapis.com/css?family=Nunito:400,500,600,700,800.900|Poppins:400,400i,500,500i,700,700i' media='all' rel='stylesheet' type='text/css'/>
