--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 </a>
               </div>
               <div class="col rounded border py-4 px-4 bg-dark text-light text-center">
-                <a href="/postman-app" class="link link-offset-2 link-underline link-underline-opacity-0">
+                <a href="https://weblink-max.github.io/postman-lite/" class="link link-offset-2 link-underline link-underline-opacity-0">
                   <i class="bi bi-envelope h1"></i>
                   <small class="text-light">Postman App</small>
                 </a>
